<resources>
    <string name="app_name">RunAce</string>
    <string name="main_activity_welcome_text">Welcome to RunAce</string>
    <string name="main_activity_welcome_subtext">You are one step away from increasing your running motivation!</string>
    <string name="main_activity_image_description">RunAce trainers logo</string>
    <string name="main_activity_register_button_text">Register</string>
    <string name="main_activity_login_button_text">Login</string>
    <string name="main_activity_login_privacy_policy_text"><![CDATA[Please read the <u>Privacy Policy</u> before using this application]]></string>
    <string name="settings_activity_title">Settings</string>
    <string name="settings_activity_general_subheading">General</string>
    <string name="settings_activity_general_distance_unit_title">Distance unit</string>
    <string-array name="settings_activity_general_distance_unit_titles">
        <item>Kilometres</item>
        <item>Miles</item>
    </string-array>
    <string-array name="settings_activity_general_distance_unit_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="settings_activity_general_enable_notifications_title">Notifications</string>
    <string name="settings_activity_general_enable_notifications_summary">Notify when a challenge is received</string>
    <string name="settings_activity_developer_subheading">Developer</string>
    <string name="settings_activity_developer_enable_location_logging_title">Location logging</string>
    <string name="settings_activity_developer_enable_location_logging_summary">Log location to file for debugging</string>
    <string name="settings_activity_developer_enable_simulated_running_title">Simulated running</string>
    <string name="settings_activity_developer_enable_simulated_running_summary">Allows easy testing of the run function</string>
    <string name="internet_connection_error_activity_image_description">Error icon</string>
    <string name="internet_connection_error_activity_message">Cannot connect, check your internet settings</string>
    <string name="error_message_100">Unauthorised request</string>
    <string name="error_message_101">Access to the internet is required for this application, check your connection</string>
    <string name="error_message_102">An error occurred, check your internet connection and retry</string>
    <string name="error_message_103">An error occurred, please try again</string>
    <string name="error_message_200">Database connection error occurred</string>
    <string name="error_message_201">Database error occurred</string>
    <string name="error_message_300">User ID not valid</string>
    <string name="error_message_301">Email not entered</string>
    <string name="error_message_302">Email not valid</string>
    <string name="error_message_303">Password not entered</string>
    <string name="error_message_304">Email and password match not found</string>
    <string name="error_message_305">Name not entered</string>
    <string name="error_message_306">Password must be at least 8 characters long</string>
    <string name="error_message_307">Email is already registered</string>
    <string name="error_message_400">Friend user ID not valid</string>
    <string name="error_message_401">Verification string not valid</string>
    <string name="error_message_402">Friend email not entered</string>
    <string name="error_message_403">Friend email not valid</string>
    <string name="error_message_404">Friend request already accepted</string>
    <string name="error_message_500">Run ID not valid</string>
    <string name="error_message_501">Distance not valid</string>
    <string name="error_message_502">Time not valid</string>
    <string name="error_message_600">Challenge ID not valid</string>
    <string name="error_message_601">Can only send challenges to friends</string>
    <string name="user_register_activity_title">Register with RunAce</string>
    <string name="user_register_activity_name_hint">Name</string>
    <string name="user_register_activity_creating_account_dialog_text">Creating account</string>
    <string name="user_register_activity_login_activity_email_hint">Email</string>
    <string name="user_register_activity_login_activity_password_hint">Password</string>
    <string name="user_login_activity_title">Login to RunAce</string>
    <string name="user_login_activity_login_trouble_text">Trouble logging in?</string>
    <string name="user_login_activity_logging_in_dialog_text">Logging in</string>
    <string name="user_password_reset_activity_title">Reset Password</string>
    <string name="user_password_reset_activity_text">Enter the email address you registered with to send a password reset email.</string>
    <string name="user_password_reset_activity_button_text">Reset Password</string>
    <string name="user_password_reset_toast_text">"An email has been sent to "</string>
    <string name="home_activity_runace_logo_image_description">RunAce logo</string>
    <string name="home_activity_profile_button_placeholder_text">Profile</string>
    <string name="home_activity_friends_button_text">Friends</string>
    <string name="home_activity_run_history_button_text">Runs</string>
    <string name="home_activity_start_button_text">Start</string>
    <string name="home_activity_about_dialog_text">Created by Mark Tickner\n\nSubmitted in partial fulfilment of the University of Greenwich BSc (Hons) Computer Science undergraduate degree programme COMP1682.</string>
    <string name="home_activity_about_dialog_close_button_text">Close</string>
    <string name="home_activity_user_logged_out_toast">You are now logged out</string>
    <string name="home_menu_challenges">Challenges</string>
    <string name="home_menu_about">About</string>
    <string name="home_menu_privacy_policy">Privacy Policy</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_logout">Log out</string>
    <string name="challenge_list_activity_title">Challenges</string>
    <string name="challenge_list_activity_image_description">Challenge icon</string>
    <string name="challenge_list_activity_none_text">No Challenges</string>
    <string name="challenge_list_activity_header">Touch a challenge to view details</string>
    <string name="challenge_list_activity_menu_show_completed">Show completed challenges</string>
    <string name="challenge_list_activity_challenge_details_prefix">"Run "</string>
    <string name="challenge_list_activity_challenge_details_separator">" in under "</string>
    <string name="challenge_list_activity_challenge_service_notification_content_name_prefix_text">"Challenge from "</string>
    <string name="challenge_view_activity_title">View Challenge</string>
    <string name="challenge_view_activity_challenge_success_text">"Completed on "</string>
    <string name="challenge_view_activity_challenge_not_yet_successful_text">Challenge not yet completed</string>
    <string name="challenge_view_activity_subtitle">"From "</string>
    <string name="challenge_view_activity_accept_button_text">Accept</string>
    <string name="challenge_view_activity_detail_text">Be ready, you will be taken straight to the running screen!</string>
    <string name="challenge_friend_activity_title">Challenge a Friend</string>
    <string name="challenge_friend_activity_choose_friend_button_text">Choose Friend</string>
    <string name="challenge_friend_activity_change_friend_button_text">Change Friend</string>
    <string name="challenge_friend_activity_button_text_send_challenge">Send Challenge</string>
    <string name="challenge_friend_activity_hint_message">Add message…</string>
    <string name="challenge_friend_activity_sending_challenge_dialog_text">Sending challenge</string>
    <string name="challenge_friend_activity_challenge_sent_toast_text">Challenge sent</string>
    <string name="challenge_friend_activity_detail_text">Your friend will be notified</string>
    <string name="run_activity_title">Running</string>
    <string name="run_activity_start_running_toast_text">Start running!</string>
    <string name="run_activity_stop_running_button_text">Stop</string>
    <string name="run_activity_pause_running_button_text">Pause</string>
    <string name="run_activity_resume_running_button_text">Resume</string>
    <string name="run_activity_stop_running_dialog_text">Are you sure you want to end the run? If you are completing a challenge all progress will be lost.</string>
    <string name="run_activity_stop_running_dialog_stop_running_button_text">End Run</string>
    <string name="run_activity_stop_running_dialog_continue_running_button_text">Keep Running</string>
    <string name="run_activity_challenge_finished_notification_text">Challenge finished, stop running!</string>
    <string name="run_activity_run_complete_activity_time_title">Time</string>
    <string name="run_activity_run_complete_activity_time_placeholder">00:00:00</string>
    <string name="run_activity_run_complete_activity_distance_title">Distance</string>
    <string name="run_activity_run_complete_activity_distance_unit_kilometres">km</string>
    <string name="run_activity_run_complete_activity_distance_unit_miles">m</string>
    <string name="run_activity_run_complete_activity_target_title">Target:</string>
    <string name="run_activity_run_complete_activity_pace_title">Pace:</string>
    <string name="run_activity_run_complete_activity_pace_current_title">Current Pace</string>
    <string name="run_activity_run_complete_activity_pace_target_title">Target Pace</string>
    <string name="run_activity_run_complete_activity_pace_average_title">Average Pace</string>
    <string name="run_activity_run_complete_activity_pace_distance_unit_kilometres">min/km</string>
    <string name="run_activity_run_complete_activity_pace_distance_unit_miles">min/m</string>
    <string name="run_activity_run_complete_activity_pace_distance_placeholder">-.--</string>
    <string name="run_activity_run_complete_activity_distance_placeholder">0.00</string>
    <string name="run_complete_activity_title">Run Results</string>
    <string name="run_complete_activity_save_run_button_text">Save Run</string>
    <string name="run_complete_activity_challenge_friend_button_text">Send Challenge</string>
    <string name="run_complete_activity_saving_run_dialog_text">Saving run</string>
    <string name="run_complete_activity_saving_run_saved_toast">"Run saved, "</string>
    <string name="run_complete_activity_saving_run_points_toast">" points earned."</string>
    <string name="run_complete_activity_saving_run_error_text">There was an error while saving your run. Check your internet connection and retry.</string>
    <string name="run_complete_activity_saving_run_error_retry_button_text">Retry</string>
    <string name="run_complete_activity_saving_run_error_cancel_button_text">Cancel</string>
    <string name="run_complete_activity_new_badge_heading">Congratulations!</string>
    <string name="run_complete_activity_new_badge_text">You have been awarded a badge.</string>
    <string name="run_complete_activity_new_badge_close_button_text">Close</string>
    <string name="run_challenge_complete_activity_title">Challenge Results</string>
    <string name="run_challenge_complete_activity_challenge_success_text">You completed the challenge!</string>
    <string name="run_challenge_complete_activity_challenge_success_icon_description_text">Tick icon</string>
    <string name="run_challenge_complete_activity_challenge_failed_text">You were unsuccessful this time, try again?</string>
    <string name="run_challenge_complete_activity_challenge_failed_icon_description_text">Cross icon</string>
    <string name="run_list_activity_title">Run History</string>
    <string name="run_list_activity_image_description">Run icon</string>
    <string name="run_list_activity_none_text">No Runs</string>
</resources>