<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mtickner.runningmotivator.UserPasswordResetActivity">

    <TextView
        android:id="@+id/password_reset_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_password_reset_activity_text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_register_activity_login_activity_email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="ResetPassword"
        android:text="@string/user_password_reset_activity_button_text"
        android:textAllCaps="true" />

</LinearLayout>