<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mtickner.runningmotivator.ChallengeViewActivity">

    <LinearLayout
        android:id="@+id/challenge_success_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/challenge_success_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/run_challenge_complete_activity_challenge_success_icon_description_text"
            android:src="@drawable/ic_tick" />

        <TextView
            android:id="@+id/challenge_success_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/challenge_view_activity_challenge_success_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/challenge_failed_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/challenge_failed_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/run_challenge_complete_activity_challenge_failed_icon_description_text"
            android:src="@drawable/ic_challenge" />

        <TextView
            android:id="@+id/challenge_failed_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/challenge_view_activity_challenge_not_yet_successful_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/bg_border_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_border_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|bottom"
            android:text="@string/run_activity_run_complete_activity_time_title" />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:gravity="center_horizontal"
            android:text="@string/run_activity_run_complete_activity_time_placeholder"
            android:textSize="45sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/distance_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_border_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/distance_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|bottom"
            android:text="@string/run_activity_run_complete_activity_distance_title" />

        <LinearLayout
            android:id="@+id/distance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run_activity_run_complete_activity_distance_placeholder"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/distance_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/run_activity_run_complete_activity_distance_unit_kilometres_placeholder"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/pace_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_border_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pace_heading"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:text="@string/run_activity_run_complete_activity_pace_average_title" />

        <LinearLayout
            android:id="@+id/pace_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-5dp"
            android:baselineAligned="false"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/pace_current_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run_activity_run_complete_activity_pace_distance_placeholder"
                    android:textSize="35sp" />

                <TextView
                    android:id="@+id/pace_distance_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/run_activity_run_complete_activity_pace_distance_unit_kilometres_placeholder" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/challenge_accept_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/challenge_view_activity_detail_text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AcceptChallenge"
        android:text="@string/challenge_view_activity_accept_button_text"
        android:textAllCaps="true"
        android:textSize="30sp" />

</LinearLayout>